--- a/website.html
+++ b/website.html
@@ -3,16 +3,25 @@
       <title> my game </title>
    </head>
    <body>
-      yis
-      uh...
-     ye
-     idk
-     just
-     just...
-     ok
-     nvm
-     to
-     much
-     work
+      <h1>my game</h1>
+      <p> 
+        yis
+        uh...
+        ye
+        idk
+        just
+        just...
+        ok
+        nvm
+        to
+        much
+        work
+      </p>
+      <p>
+          so yea
+          don...
+          dont
+          do anithin
+      </p>
    </body>
 </html>
