--- a/website.html
+++ b/website.html
@@ -3,6 +3,7 @@
       <title> my game </title>
    </head>
    <body>
+      <img src="image.bmp" />
       <h1>my game</h1>
       <p> 
         yis
